General
	* Changed most methods that deal with DataStream to take into account the current position of the stream.
	* Added a stack_array type that replaces std::vector. In certain tests, it outperforms by a factor of 3.
	* Added a Resources class that handles loading SlimDX resources from the SlimDX DLL.
		* As of now, this contains two different versions of the SlimDX icon.
	* Moved Viewport from the base namespace into the individual subsystems that needed it.

Math
	* Fixed a typo in BoundingSphere.Contains.

Direct3D 9
	* Fixed a bug that caused AdapterDetails.GetCertification to throw when the adapter wasn't certified.
	* Fixed a bug in AnimationController.GetAnimationSet that caused hard crashes.
	* Fixed a bug in the texture loading functions that could result in an invalid size.

Direct3D 10
	* Added the Predicate interface.
	* Added the Device.SetPredication() and Device.GetPredication() methods.
	* Added an overload to Device.UpdateSubresource() that allows the update to occur without a destination offset.
	* Added the SamplerState interface.
	* Filled in missing shader methods.
	* Refactored ShaderSignature and ShaderBytecode to be independent of one another.
	* Added functions to compile to shader bytecode.
	* Added functions to extract shader signatures.
	* Added constructors for geometry, vertex, and pixel shaders.
	* Changed inheritance hierarchies to make base types abstract.
	
Direct3D11
	* I added it.

DirectSound
	* Removed the confusing lockEntireBuffer parameter from CaptureBuffer.Read.
	* Fixed a bug in SoundBuffer.Read that caused EndOfStreamException to be thrown erroneously.

DirectInput
	* Refactored the Device class into an abstract base class.
	* Added a CustomDevice<T> class for devices with custom data formats.
	* Added the Keyboard class for keyboard devices.
	* Added the Mouse class for mouse devices.
	* Added the Joystick class for joystick devices.
	* Changed a few collection results to return IList<T> instead of IEnumerable<T>.